--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,4 +2,5 @@
     <h1>{{pageTitle}}</h1>
     <a href = '/about'>About</a>
     <a href = '/'>Home</a>
+    <a href = '/projects'>Projects</a>
 </header>
